--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ html
 </head>
 <body>
     <div class="container">
-        <h1>Ria's Book Reviews</h1>
+        <h1>Ady's Book Reviews</h1>
         <ul class="reviews-list">
             <li>
                 <div class="title">Zero to One</div>
