--- a/index.html
+++ b/index.html
@@ -75,7 +75,27 @@ html
                     This is where the review content goes. Write your thoughts and opinions about the book here.
                 </div>
             </li>
-            <!-- Add more reviews here -->
+            <li>
+                <div class="title">Book Title Three</div>
+                <div class="author">by Author Name</div>
+                <div class="content">
+                    This is where the review content goes. Write your thoughts and opinions about the book here.
+                </div>
+            </li>
+            <li>
+                <div class="title">Book Title Four</div>
+                <div class="author">by Author Name</div>
+                <div class="content">
+                    This is where the review content goes. Write your thoughts and opinions about the book here.
+                </div>
+            </li>
+            <li>
+                <div class="title">Book Title Five</div>
+                <div class="author">by Author Name</div>
+                <div class="content">
+                    This is where the review content goes. Write your thoughts and opinions about the book here.
+                </div>
+            </li>
         </ul>
     </div>
 </body>
