--- a/index.html
+++ b/index.html
@@ -68,31 +68,31 @@
                 </div>
             </li>
             <li>
-                <div class="title">Book Title Two</div>
-                <div class="author">by Author Name</div>
+                <div class="title">101 Essays That Change The Way You Think</div>
+                <div class="author">by Brianna Wiest</div>
                 <div class="content">
-                    This is where the review content goes. Write your thoughts and opinions about the book here.
+                    Wide range of life philosophies that are subtly but broadly relatable. Restructured how I viewed my relationships, work commitment, and health. 11/10
                 </div>
             </li>
             <li>
-                <div class="title">Book Title Three</div>
-                <div class="author">by Author Name</div>
+                <div class="title">Fooled by Randomness</div>
+                <div class="author">by Nicholas Nassim Taleb</div>
                 <div class="content">
-                    This is where the review content goes. Write your thoughts and opinions about the book here.
+                    A lil bit of a madman shares his knowledge of probability while anecdoting his experience as a finance bro. My takeaways are two-fold: 1) small risk, small rewards are not bad at all. 2) if elements of randomness can always bog you down, hard work is the one honest mappable input given you treat success as a phenomena stripped down to a function. Given I only understand ~ 15% as a 16yo, I need to pick it back up. 8.5/10 
                 </div>
             </li>
             <li>
-                <div class="title">Book Title Four</div>
-                <div class="author">by Author Name</div>
+                <div class="title">Book Naked Statistics</div>
+                <div class="author">by Charles Wheelan</div>
                 <div class="content">
-                    This is where the review content goes. Write your thoughts and opinions about the book here.
+                    A goofy book about how abundant statistics is in the world around us. Very applicable examples across a wide range of domains, creatively filled with light humor. Enjoyable read. 9/10
                 </div>
             </li>
             <li>
-                <div class="title">Book Title Five</div>
-                <div class="author">by Author Name</div>
+                <div class="title">21 Problems for the 21st Century</div>
+                <div class="author">by Yuval Noah Harari</div>
                 <div class="content">
-                    This is where the review content goes. Write your thoughts and opinions about the book here.
+                    A classic on common problems that are not so common to people these days. I think he hypes up some waries dramatically, though maybe I just lack the foresight as of now. Regardless, 8.5/10
                 </div>
             </li>
         </ul>
