--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
             </li>
             <li>
-                <div class="title">Book Naked Statistics</div>
+                <div class="title">Naked Statistics</div>
                 <div class="author">by Charles Wheelan</div>
                 <div class="content">
                     A goofy book about how abundant statistics is in the world around us. Very applicable examples across a wide range of domains, creatively filled with light humor. Enjoyable read. 9/10
