--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="title">Fooled by Randomness</div>
                 <div class="author">by Nicholas Nassim Taleb</div>
                 <div class="content">
-                    A lil bit of a madman shares his knowledge of probability while anecdoting his experience as a finance bro. My takeaways are two-fold: 1) small risk, small rewards are not bad at all. 2) if elements of randomness can always bog you down, hard work is the one honest mappable input given you treat success like a function. 8.5/10 
+                    A quasi madman finance bro shares his knowledge of probability while anecdoting his experience as a finance bro. My takeaways are two-fold: 1) small risk, small rewards are not bad at all. 2) if elements of randomness can always bog you down, hard work is the one honest mappable input given you treat success like a function. 8.5/10 
                 </div>
             </li>
             <li>
