--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
                     A classic on common problems that are not so common to people these days. I think he hypes up some waries dramatically, though maybe I just lack the foresight as of now. Regardless, 8.5/10
                 </div>
             </li>
+             <li>
+                <div class="title"><a href="https://www.navalmanack.com/">The Almanack of Naval Ravikant</a></div>
+                <div class="author">by Yuval Noah Harari</div>
+                <div class="content">
+                    Can't beat this man when it comes to wisdom. Eye-opening read on being wealthy, staying happy, and living a good and fulfilling life. 10/10
+                </div>
+            </li>
         </ul>
     </div>
 </body>
