--- a/index.html
+++ b/index.html
@@ -61,35 +61,35 @@
         <h1>Ady's Book Reviews</h1>
         <ul class="reviews-list">
             <li>
-                <div class="title">Zero to One</div>
+                <div class="title"><a href="https://www.amazon.com/Zero-One-Notes-Startups-Future/dp/0804139296">Zero to One</div>
                 <div class="author">by Peter Thiel</div>
                 <div class="content">
                     One of the easiest to digest yet solid substance books out there. Practical, insightful, and dense. 10/10
                 </div>
             </li>
             <li>
-                <div class="title">101 Essays That Change The Way You Think</div>
+                <div class="title"><a href="https://www.amazon.com/Essays-That-Will-Change-Think/dp/1945796065">101 Essays That Change The Way You Think</div>
                 <div class="author">by Brianna Wiest</div>
                 <div class="content">
                     Wide range of life philosophies that are subtly but broadly relatable. Restructured how I viewed my relationships, work commitment, and health. 11/10
                 </div>
             </li>
             <li>
-                <div class="title">Fooled by Randomness</div>
+                <div class="title"><a href="https://www.amazon.com/Fooled-Randomness-Hidden-Markets-Incerto/dp/0812975219">Fooled by Randomness</div>
                 <div class="author">by Nicholas Nassim Taleb</div>
                 <div class="content">
                     A quasi madman finance bro shares his knowledge of probability while recounting his experience on the Street. My takeaways are two-fold: 1) small risk, small rewards are not bad at all. 2) if elements of randomness can always bog you down, hard work is the one honest mappable input given you treat success like a function. 8.5/10 
                 </div>
             </li>
             <li>
-                <div class="title">Naked Statistics</div>
+                <div class="title"><a href="https://www.amazon.com/Naked-Statistics-Stripping-Dread-Data/dp/039334777X">Naked Statistics</div>
                 <div class="author">by Charles Wheelan</div>
                 <div class="content">
                     A goofy book about how abundant statistics is in the world around us. Very applicable examples across a wide range of domains, creatively filled with light humor. Enjoyable read. 9/10
                 </div>
             </li>
             <li>
-                <div class="title">21 Problems for the 21st Century</div>
+                <div class="title"><a href="https://www.amazon.com/Lessons-21st-Century-Yuval-Harari/dp/0525512179">21 Problems for the 21st Century</div>
                 <div class="author">by Yuval Noah Harari</div>
                 <div class="content">
                     A classic on common problems that are not so common to people these days. I think he hypes up some waries dramatically, though maybe I just lack the foresight as of now. Regardless, 8.5/10
@@ -97,7 +97,7 @@
             </li>
              <li>
                 <div class="title"><a href="https://www.navalmanack.com/">The Almanack of Naval Ravikant</a></div>
-                <div class="author">by Yuval Noah Harari</div>
+                <div class="author">by Eric Jorgenson</div>
                 <div class="content">
                     Can't beat this man when it comes to wisdom. Eye-opening read on being wealthy, staying happy, and living a good and fulfilling life. 10/10
                 </div>
