--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Ady's Book Reviews</h1>
+        <h1>Ady's Book Reviews</h1>     
         <ul class="reviews-list">
             <li>
-                <div class="title"><a href="https://www.amazon.com/Zero-One-Notes-Startups-Future/dp/0804139296">Zero to One</div>
+                <div class="title"><a href="https://www.amazon.com/Zero-One-Notes-Startups-Future/dp/0804139296">Zero to One</a></div>
                 <div class="author">by Peter Thiel</div>
                 <div class="content">
                     One of the easiest to digest yet solid substance books out there. Practical, insightful, and dense. 10/10
