--- a/index.html
+++ b/index.html
@@ -68,28 +68,28 @@
                 </div>
             </li>
             <li>
-                <div class="title"><a href="https://www.amazon.com/Essays-That-Will-Change-Think/dp/1945796065">101 Essays That Change The Way You Think</div>
+                <div class="title"><a href="https://www.amazon.com/Essays-That-Will-Change-Think/dp/1945796065">101 Essays That Change The Way You Think</a></div>
                 <div class="author">by Brianna Wiest</div>
                 <div class="content">
                     Wide range of life philosophies that are subtly but broadly relatable. Restructured how I viewed my relationships, work commitment, and health. 11/10
                 </div>
             </li>
             <li>
-                <div class="title"><a href="https://www.amazon.com/Fooled-Randomness-Hidden-Markets-Incerto/dp/0812975219">Fooled by Randomness</div>
+                <div class="title"><a href="https://www.amazon.com/Fooled-Randomness-Hidden-Markets-Incerto/dp/0812975219">Fooled by Randomness</a></div>
                 <div class="author">by Nicholas Nassim Taleb</div>
                 <div class="content">
                     A quasi madman finance bro shares his knowledge of probability while recounting his experience on the Street. My takeaways are two-fold: 1) small risk, small rewards are not bad at all. 2) if elements of randomness can always bog you down, hard work is the one honest mappable input given you treat success like a function. 8.5/10 
                 </div>
             </li>
             <li>
-                <div class="title"><a href="https://www.amazon.com/Naked-Statistics-Stripping-Dread-Data/dp/039334777X">Naked Statistics</div>
+                <div class="title"><a href="https://www.amazon.com/Naked-Statistics-Stripping-Dread-Data/dp/039334777X">Naked Statistics</a></div>
                 <div class="author">by Charles Wheelan</div>
                 <div class="content">
                     A goofy book about how abundant statistics is in the world around us. Very applicable examples across a wide range of domains, creatively filled with light humor. Enjoyable read. 9/10
                 </div>
             </li>
             <li>
-                <div class="title"><a href="https://www.amazon.com/Lessons-21st-Century-Yuval-Harari/dp/0525512179">21 Problems for the 21st Century</div>
+                <div class="title"><a href="https://www.amazon.com/Lessons-21st-Century-Yuval-Harari/dp/0525512179">21 Problems for the 21st Century</a></div>
                 <div class="author">by Yuval Noah Harari</div>
                 <div class="content">
                     A classic on common problems that are not so common to people these days. I think he hypes up some waries dramatically, though maybe I just lack the foresight as of now. Regardless, 8.5/10
