--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,9 +23,23 @@
             color: #333333;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
         }
+        .sort-by {
+            margin-bottom: 20px;
+        }
+        .sort-by label {
+            display: block;
+            margin-bottom: 10px;
+        }
+        .sort-by select {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #e0e0e0;
+            border-radius: 5px;
+        }
         .reviews-list {
             list-style-type: none;
             padding: 0;
+            margin: 0;
         }
         .reviews-list li {
             margin: 20px 0;
@@ -54,11 +67,26 @@
             line-height: 1.6;
             color: #555555;
         }
+        .date-read {
+            margin-top: 10px;
+        }
+        .rating {
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Ady's Book Reviews</h1>     
+        <h1>Ady's Book Reviews</h1>
+        <div class="sort-by">
+            <label for="sort">Sort by:</label>
+            <select id="sort">
+                <option value="title">Title</option>
+                <option value="author">Author</option>
+                <option value="date-read">Date Read</option>
+                <option value="rating">Rating</option>
+            </select>
+        </div>
         <ul class="reviews-list">
             <li>
                 <div class="title"><a href="https://www.amazon.com/Zero-One-Notes-Startups-Future/dp/0804139296">Zero to One</a></div>
@@ -66,6 +94,8 @@
                 <div class="content">
                     One of the easiest to digest yet solid substance books out there. Practical, insightful, and dense. 10/10
                 </div>
+                <div class="date-read">Read on: 2023-04-15</div>
+                <div class="rating">Rating: 10/10</div>
             </li>
             <li>
                 <div class="title"><a href="https://www.amazon.com/Essays-That-Will-Change-Think/dp/1945796065">101 Essays That Change The Way You Think</a></div>
@@ -73,6 +103,8 @@
                 <div class="content">
                     Wide range of life philosophies that are subtly but broadly relatable. Restructured how I viewed my relationships, work commitment, and health. 11/10
                 </div>
+                <div class="date-read">Read on: 2023-03-22</div>
+                <div class="rating">Rating: 11/10</div>
             </li>
             <li>
                 <div class="title"><a href="https://www.amazon.com/Fooled-Randomness-Hidden-Markets-Incerto/dp/0812975219">Fooled by Randomness</a></div>
@@ -80,6 +112,8 @@
                 <div class="content">
                     A quasi madman finance bro shares his knowledge of probability while recounting his experience on the Street. My takeaways are two-fold: 1) small risk, small rewards are not bad at all. 2) if elements of randomness can always bog you down, hard work is the one honest mappable input given you treat success like a function. 8.5/10 
                 </div>
+                <div class="date-read">Read on: 2023-05-05</div>
+                <div class="rating">Rating: 8.5/10</div>
             </li>
             <li>
                 <div class="title"><a href="https://www.amazon.com/Naked-Statistics-Stripping-Dread-Data/dp/039334777X">Naked Statistics</a></div>
@@ -87,6 +121,8 @@
                 <div class="content">
                     A goofy book about how abundant statistics is in the world around us. Very applicable examples across a wide range of domains, creatively filled with light humor. Enjoyable read. 9/10
                 </div>
+                <div class="date-read">Read on: 2023-02-11</div>
+                <div class="rating">Rating: 9/10</div>
             </li>
             <li>
                 <div class="title"><a href="https://www.amazon.com/Lessons-21st-Century-Yuval-Harari/dp/0525512179">21 Problems for the 21st Century</a></div>
@@ -94,16 +130,19 @@
                 <div class="content">
                     A classic on common problems that are not so common to people these days. I think he hypes up some waries dramatically, though maybe I just lack the foresight as of now. Regardless, 8.5/10
                 </div>
+                <div class="date-read">Read on: 2023-01-20</div>
+                <div class="rating">Rating: 8.5/10</div>
             </li>
-             <li>
+            <li>
                 <div class="title"><a href="https://www.navalmanack.com/">The Almanack of Naval Ravikant</a></div>
                 <div class="author">by Eric Jorgenson</div>
                 <div class="content">
                     Can't beat this man when it comes to wisdom. Eye-opening read on being wealthy, staying happy, and living a good and fulfilling life. 10/10
                 </div>
+                <div class="date-read">Read on: 2023-06-01</div>
+                <div class="rating">Rating: 10/10</div>
             </li>
         </ul>
     </div>
 </body>
 </html>
-
