--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </ul>
     </div>
     <footer>
-        <p>&copy; 2024 Ria Deshpande</p>
+        <p>&copy; 2024 Ady Mehta </p>
     </footer>
     <script>
         function sortReviews() {
