--- a/index.html
+++ b/index.html
@@ -27,6 +27,35 @@
             max-width: 800px;
             margin: 50px auto;
             padding: 0 20px;
+            display: none; /* Hide initially */
+        }
+        .recommendation-form {
+            max-width: 400px;
+            margin: 100px auto;
+            padding: 20px;
+            border: 1px solid #e0e0e0;
+            background-color: #ffffff;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .recommendation-form h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .recommendation-form input {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #e0e0e0;
+            border-radius: 5px;
+        }
+        .recommendation-form button {
+            width: 100%;
+            padding: 10px;
+            background-color: #007bff;
+            border: none;
+            border-radius: 5px;
+            color: #ffffff;
+            font-size: 1em;
         }
         h1 {
             text-align: center;
@@ -101,7 +130,14 @@
             <a href="/contact">Contact</a>
         </nav>
     </header>
-    <div class="container">
+    
+    <div class="recommendation-form" id="recommendation-form">
+        <h2>Enter Your Book Recommendation</h2>
+        <input type="text" id="book-recommendation" placeholder="Book Title by Author" required>
+        <button onclick="submitRecommendation()">Submit</button>
+    </div>
+
+    <div class="container" id="main-content">
         <h1>Ady's Book Reviews</h1>
         <div class="sort-by">
             <label for="sort">Sort by:</label>
@@ -150,35 +186,4 @@
                 <div class="rating">Rating: 9/10</div>
             </li>
             <li data-title="21 Problems for the 21st Century" data-author="Yuval Noah Harari" data-date-read="2023-01-20" data-rating="8.5">
-                <div class="title"><a href="https://www.amazon.com/Lessons-21st-Century-Yuval-Harari/dp/0525512179">21 Problems for the 21st Century</a></div>
-                <div class="author">by Yuval Noah Harari</div>
-                <div class="content">
-                    A classic on common problems that are not so common to people these days. I think he hypes up some waries dramatically, though maybe I just lack the foresight as of now. Regardless, 8.5/10
-                </div>
-                <div class="date-read">Read on: 2023-01-20</div>
-                <div class="rating">Rating: 8.5/10</div>
-            </li>
-            <li data-title="The Almanack of Naval Ravikant" data-author="Eric Jorgenson" data-date-read="2023-06-01" data-rating="10">
-                <div class="title"><a href="https://www.navalmanack.com/">The Almanack of Naval Ravikant</a></div>
-                <div class="author">by Eric Jorgenson</div>
-                <div class="content">
-                    Can't beat this man when it comes to wisdom. Eye-opening read on being wealthy, staying happy, and living a good and fulfilling life. 10/10
-                </div>
-                <div class="date-read">Read on: 2023-06-01</div>
-                <div class="rating">Rating: 10/10</div>
-            </li>
-        </ul>
-    </div>
-    <footer>
-        <p>&copy; 2024 Ady Mehta </p>
-    </footer>
-    <script>
-        function sortReviews() {
-            const sortBy = document.getElementBy
-
-
-
-
-
-
-
+                <div class="title"><a href
