--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </style>
     <script>
         (function(){
-            emailjs.init("ady_mehta_email"); // Replace with your user ID from EmailJS
+            emailjs.init("YOUR_USER_ID"); // Replace with your user ID from EmailJS
         })();
 
         function submitRecommendation() {
@@ -200,4 +200,40 @@
                 <div class="content">
                     A quasi madman finance bro shares his knowledge of probability while recounting his experience on the Street. My takeaways are two-fold: 1) small risk, small rewards are not bad at all. 2) if elements of randomness can always bog you down, hard work is the one honest mappable input given you treat success like a function. 8.5/10 
                 </div>
-                <div class="date-read">Read on: 202
+                <div class="date-read">Read on: 2023-05-05</div>
+                <div class="rating">Rating: 8.5/10</div>
+            </li>
+            <li data-title="Naked Statistics" data-author="Charles Wheelan" data-date-read="2023-02-11" data-rating="9">
+                <div class="title"><a href="https://www.amazon.com/Naked-Statistics-Stripping-Dread-Data/dp/039334777X">Naked Statistics</a></div>
+                <div class="author">by Charles Wheelan</div>
+                <div class="content">
+                    A goofy book about how abundant statistics is in the world around us. Very applicable examples across a wide range of domains, creatively filled with light humor. Enjoyable read. 9/10
+                </div>
+                <div class="date-read">Read on: 2023-02-11</div>
+                <div class="rating">Rating: 9/10</div>
+            </li>
+            <li data-title="21 Problems for the 21st Century" data-author="Yuval Noah Harari" data-date-read="2023-01-20" data-rating="8.5">
+                <div class="title"><a href="https://www.amazon.com/Lessons-21st-Century-Yuval-Harari/dp/0525512179">21 Problems for the 21st Century</a></div>
+                <div class="author">by Yuval Noah Harari</div>
+                <div class="content">
+                    A classic on common problems that are not so common to people these days. I think he hypes up some waries dramatically, though maybe I just lack the foresight as of now. Regardless, 8.5/10
+                </div>
+                <div class="date-read">Read on: 2023-01-20</div>
+                <div class="rating">Rating: 8.5/10</div>
+            </li>
+            <li data-title="The Almanack of Naval Ravikant" data-author="Eric Jorgenson" data-date-read="2023-06-01" data-rating="10">
+                <div class="title"><a href="https://www.navalmanack.com/">The Almanack of Naval Ravikant</a></div>
+                <div class="author">by Eric Jorgenson</div>
+                <div class="content">
+                    Can't beat this man when it comes to wisdom. Eye-opening read on being wealthy, staying happy, and living a good and fulfilling life. 10/10
+                </div>
+                <div class="date-read">Read on: 2023-06-01</div>
+                <div class="rating">Rating: 10/10</div>
+            </li>
+        </ul>
+    </div>
+    <footer>
+        <p>&copy; 2024 Ady Mehta </p>
+    </footer>
+</body>
+</html>
