--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     
     <div class="recommendation-form" id="recommendation-form">
         <h2>Enter Your Book Recommendation</h2>
-        <input type="text" id="book-recommendation" placeholder="Book Title by Author" required>
+        <input type="text" id="book-recommendation" name="message" placeholder="Book Title by Author" required>
         <button onclick="submitRecommendation()">Submit</button>
     </div>
 
